@@ -215,6 +215,12 @@ a file that looked like a package part file but was corrupted, or
 interactions with the system, such as accesses to the database,
 memory allocations, etc.
 .
+.SH ENVIRONMENT
+.TP
+.B SOURCE_DATE_EPOCH
+If set, it will be used as the timestamp (as seconds since the epoch) in
+the \fBdeb\-split\fP(5)'s \fBar\fP(5) container.
+.
 .SH FILES
 .TP
 .I %ADMINDIR%/parts
