@@ -13,6 +13,8 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     name affected.
   * Do not emit epochs for unambiguous versions in deb-split package header.
     Regression introduced in dpkg 1.18.0.
+  * Make the deb-split(5) generation in dpkg-split reproducible, by using the
+    timestamp from SOURCE_DATE_EPOCH.
   * Perl modules:
     - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
   * Packaging:
